# slab/src/main/java/com/ipartek/formacion/slab/rest/RocodromoRest.java
@@ -3,9 +3,11 @@ package com.ipartek.formacion.slab.rest;
 import java.util.ArrayList;
 
 import com.ipartek.formacion.slab.accesodatos.RocodromoAccesoDatos;
+import com.ipartek.formacion.slab.dtos.DetalleRocodromoDTO;
 import com.ipartek.formacion.slab.dtos.LeerBloqueDTO;
 
 import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 
@@ -16,6 +18,11 @@ public class RocodromoRest {
 	@Path("/{id}")
 	public ArrayList<LeerBloqueDTO> obtenerTodosPorId(@PathParam("id") Long id) {
 		return RocodromoAccesoDatos.obtenerTodosPorId(id);
+	}
+	
+	@POST
+	public DetalleRocodromoDTO insertar(DetalleRocodromoDTO rocodromo) {
+		return RocodromoAccesoDatos.insertar(rocodromo);
 	}
 
 }
