# slab/src/main/webapp/openapi/slab.yml
@@ -32,6 +32,25 @@ paths:
                 schema:
                   $ref: '#/components/schemas/Bloque'
 
+  /rocodromos:
+    post:
+      tags: 
+        - rocodromos
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Rocodromo'
+        required: true
+      responses:
+        '201':
+          description: CREATED
+          content:
+              application/json:
+                schema: 
+                  $ref: '#/components/schemas/Rocodromo'
+
+
   /rocodromos/{id}:
     get:
       tags:
